fix(rebar): update rebar config & lock
changes :
- update all dependencies url from using git to https
- update eleveldb git ref
- all master dependencies will be locked to fixed version

--- a/rebar.config
+++ b/rebar.config
@@ -5,8 +5,8 @@
             {platform_define, "^(R|1|20)", fun_stacktrace}]}.
 {edoc_opts, [{preprocess, true}]}.
 {project_plugins, [
-                   {rebar3_cuttlefish, {git, "git://github.com/vernemq/rebar3_cuttlefish",
-                                        {branch, "master"}}}]}.
+                   {rebar3_cuttlefish, {git, "https://github.com/vernemq/rebar3_cuttlefish",
+                                        {ref, "389c7bda06e452884a5d564270158c5f6fe7c0e2"}}}]}.
 {dialyzer, [{exclude_mods, [vmq_plugin]},
             {plt_location, "plts"},
             {base_plt_location, "plts_base"}]}.
@@ -16,12 +16,12 @@
         {lager, "3.8.0"},
         {stdout_formatter, "0.2.3"},
         %% use specific cuttlefish commit until either 2.2.1 or 2.3.0 is relased.
-        {cuttlefish, {git, "git://github.com/Kyorai/cuttlefish.git", {tag, "v2.3.0"}}},
-        {vernemq_dev, {git, "git://github.com/vernemq/vernemq_dev.git", {branch, "master"}}},
+        {cuttlefish, {git, "https://github.com/Kyorai/cuttlefish.git", {tag, "v2.3.0"}}},
+        {vernemq_dev, {git, "https://github.com/vernemq/vernemq_dev.git", {ref, "cc8d225cfe9c7f32ff4007b5d49ce6637f3a1be2"}}},
         {syslog, "1.1.0"},
-        {lager_syslog, {git, "git://github.com/basho/lager_syslog.git", {branch, "develop-3.0"}}},
+        {lager_syslog, {git, "https://github.com/basho/lager_syslog.git", {branch, "develop-3.0"}}},
         %% remove once clique hex package 3.0.2 is released
-        {clique, {git, "git://github.com/vernemq/clique.git", {branch, "rel_0.3.6-verne"}}}
+        {clique, {git, "https://github.com/vernemq/clique.git", {branch, "rel_0.3.6-verne"}}}
        ]}.
 
 {overrides, [
@@ -36,7 +36,7 @@
   {rpi32,
    [{deps,
       [
-       {eleveldb, {git, "git://github.com/vernemq/eleveldb.git", {branch, "rpi-32"}}}
+       {eleveldb, {git, "https://github.com/vernemq/eleveldb.git", {branch, "rpi-32"}}}
       ]
     },
     %% Make sure the release generation can find the schema files is
